# Audio-Slicer-Multilingual

./: LICENSE  README.en.md  README.md  README.zh-CN.md  main.bat  pyproject.toml  requirements.txt
assets/ui/: ui_mainwindow.ui
scripts/: slicer-gui.py  slicer.py
src/audio_slicer/gui/: Ui_MainWindow.py  mainwindow.py
src/audio_slicer/modules/: __init__.py  i18n.py
src/audio_slicer/utils/: preview.py  slicer2.py
tools/: file_version_info.txt  pack-gui.ps1
